CLEANUP: Typo in report

--- a/report/report.tex
+++ b/report/report.tex
@@ -99,7 +99,7 @@ Cette incompréhension du sujet fût à l'origine de bien des découragements, e
 le plus de réponse.\newline
 
 Une FST qui permette l'indexation de texte, qu'est-ce ? Une simple structure de donnée. Un tableau
-(voir \autoref{tab:fst1} et \autoref{tab:fst2}) ou un graphe (voir \autoref{fig:fst-dico1} et \autoref{fig:fst-dico2} peut la représenter.
+(voir \autoref{tab:fst1} et \autoref{tab:fst2}) ou un graphe (voir \autoref{fig:fst-dico1} et \autoref{fig:fst-dico2} peut la représenter).
 Elle est construite par un algorithme à partir d'un dictionnaire qui associe à des mots des valeurs.
 Enfin cela permet de parser du texte lettre à lettre (voir mots à mots) rapidement et en parallèle.
 
