CLEANUP: Typo in report

--- a/report/report.tex
+++ b/report/report.tex
@@ -119,7 +119,7 @@ algorithmes de création d'une FST, tests en bytecode... Alors que ce n'était p
 
 
 C'est après une pause dans le projet que nous avons pu le reprendre d'un regard nouveau et
-l'aborder avec un outil que nous maitrisons mieux pour générer du text : bash. Par un découragement
+l'aborder avec un outil que nous maitrisons mieux pour générer du texte : bash. Par un découragement
 général nous avons presqu'involontairement trouvé ce dont nous avions besoin pour nous lancer
 avec efficacité dans le projet : un appui solide mais rapide à construire.
 
