CLEANUP: Typo in report

--- a/report/report.tex
+++ b/report/report.tex
@@ -138,8 +138,8 @@ bash et le C.
 Nous avons créé manuellement des FST très basique, reliées à un dictionnaire, afin de disposer
 d'un jeu de test. Ils se trouvent en \autoref{sec:annexe:shell}.
 
-Nous avons légèrement adapter le format défini par AT\&T opur décrire des FST dans un fichier texte.
-CE jeu de données servira pendant tout le projet en étant réadapté en Java par la suite.
+Nous avons légèrement adapter le format défini par AT\&T pour décrire des FST dans un fichier texte.
+Ce jeu de données servira pendant tout le projet en étant réadapté en Java par la suite.
 
 \subsubsection{Fonctionnement}
 
