MINOR: Forgot a title

--- a/report/report.tex
+++ b/report/report.tex
@@ -574,7 +574,8 @@ lookupswitch \{
 \end{itemize}
 \}
 
-== Incrément du total ==
+\paragraph{Incrément du total}
+~\\
 Lorsque le poids d'un arc est != 0, on fait en java : result+=21.0f;
 
 On va remplacer ça par :
@@ -590,6 +591,7 @@ On va remplacer ça par :
 \end{itemize}
 
 \paragraph{State finaux}
+~\\
 Lorsque l'on est sur un state final, on fait en java : return (pos != token.length) ? -1 : result;
 
 On va utiliser notre (ERR) pour factoriser le code :
